[package]
name = "esp32-s3-can-display"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"


[dependencies]
esp-hal = { version = "1.0.0-beta.1", features = ["esp32s3", "unstable"] }
esp-backtrace = { version = "0.16.0", features = [
    "panic-handler",
    "println"
] }
esp-println = { version = "0.14.0", features = [ "log-04" ] }
log = { version = "0.4.26" }

esp-alloc = "0.8.0"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
mipidsi = "0.9.0"
embedded-graphics-framebuf = "0.5.0"
heapless = "0.8.0"
embedded-hal-bus = "0.3.0"
bevy_ecs = { version = "0.16.1", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
embedded-can = "0.4.1"
# num-traits = "0.2.19"

[features]
default = [ "esp-hal/esp32s3", "esp-backtrace/esp32s3", "esp-println/esp32s3", "esp-hal/psram" ]
